Update Page Not Found Error Message

--- a/src/app/Components/shared/page-not-found/page-not-found.component.html
+++ b/src/app/Components/shared/page-not-found/page-not-found.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row overflow-hidden">
         <div class="col-md">
-            <h3 class="pt-4 text-center text-primary">Gotcha, I knew you are going to test this! 😉</h3>
+            <h3 class="pt-4 text-center text-primary">Gotcha, I knew you were going to test this! 😉</h3>
             <h3 class="p-4 text-center text-danger">This page was not found!</h3>
         </div>
     </div>
