Reduce Footer Font

--- a/src/app/Components/shared/footer/footer.component.html
+++ b/src/app/Components/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
 <div class="footer bg-light">
-    <p class="fs-5 fw-bold">By <a style="color: steelblue !important" class="text-reset" href="https://jake-08.github.io/jakelin/main/" target="_blank">Jake Lin</a> @ {{ year }}, Powered by <a style="color: #B52E31" href="https://angular.io/" target="_blank">Angular</a></p>
+    <p class="fw-bold">By <a style="color: steelblue !important" class="text-reset" href="https://jake-08.github.io/jakelin/main/" target="_blank">Jake Lin</a> @ {{ year }}, Powered by <a style="color: #B52E31" href="https://angular.io/" target="_blank">Angular</a></p>
 </div>
   
